--- a/index.html
+++ b/index.html
@@ -178,6 +178,20 @@
                         </article>
 
                         <article class="projects__card">
+                            <img src="https://i.imgur.com/tju9YYu.png" alt="" class="projects__img">
+
+                            <div class="projects__modal">
+                                <div>
+                                    <span class="projects__subtitle">Tools By ChiếnPc</span>
+                                    <h3 class="projects__title">Ddos - Web</h3>
+                                    <a href="https://drive.google.com/file/d/1LUk_CAw7Nn4AdGMdJ9HjB9powaTk0Krw/view?usp=sharing" class="projects__button button button__small">
+                                        <i class="ri-eye-fill"></i>
+                                    </a>
+                                </div>
+                            </div>
+                        </article>
+
+                        <article class="projects__card">
                             <img src="https://i.imgur.com/IiHpY96.png" alt="" class="projects__img">
 
                             <div class="projects__modal">
