--- a/index.html
+++ b/index.html
@@ -222,6 +222,20 @@
                                 </div>
                             </div>
                         </article>
+                        
+                        <article class="projects__card">
+                            <img src="https://i.imgur.com/AK1ttbR.png" alt="" class="projects__img">
+
+                            <div class="projects__modal">
+                                <div>
+                                    <span class="projects__subtitle">TikTok</span>
+                                    <h3 class="projects__title">Tools Buff TikTok</h3>
+                                    <a href="https://drive.google.com/drive/u/0/folders/1BpdU7g_NBPD46F95qYkMTc2UceFhzcWT">
+                                        <i class="ri-eye-fill"></i>
+                                    </a>
+                                </div>
+                            </div>
+                        </article>
 
                         <article class="projects__card">
                             <img src="https://i.imgur.com/tju9YYu.png" alt="" class="projects__img">
