--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
                                 <div>
                                     <span class="projects__subtitle">TikTok</span>
                                     <h3 class="projects__title">Tools Buff TikTok</h3>
-                                    <a href="https://drive.google.com/drive/u/0/folders/1BpdU7g_NBPD46F95qYkMTc2UceFhzcWT">
+                                    <a href="https://drive.google.com/file/d/13ShODrPjUfBBCRHWYI8GpstX_uN1usvM/view?usp=share_link">
                                         <i class="ri-eye-fill"></i>
                                     </a>
                                 </div>
