--- a/index.html
+++ b/index.html
@@ -70,11 +70,14 @@
 
                 <div class="profile__buttons">
                     <!-- Insert your CV -->
-                    <a href="thongtinthanhtoan" class="button">
-                        Thông Tin Cá Nhân - Thanh Toán<i class="ri-bank-line"></i>
+                    <a href="thongtinthanhtoan1" class="button">
+                        Thông Tin Cá Nhân<i class="ri-bank-line"></i>
                     </a>
                      <a href="guicrushne" class="button">
                         Gửi Tới Cậu Nè !! <i class="ri-heart-fill"></i>
+                    </a>
+                     <a href="story" class="button">
+                        Story !! <i class="ri-bank-fill"></i>
                     </a>
 
                     <div class="profile__buttons-small">
