--- a/index.html
+++ b/index.html
@@ -70,14 +70,17 @@
 
                 <div class="profile__buttons">
                     <!-- Insert your CV -->
-                    <a href="thongtinthanhtoan" class="button">
+                    <a href="thongtinthanhtoan1" class="button">
                         Thông Tin Cá Nhân<i class="ri-bank-line"></i>
                     </a>
-                     <a href="guicrushne" class="button">
-                        Gửi Tới Cậu Nè !! <i class="ri-heart-fill"></i>
+                     <a href="https://adminnet.tk" class="button">
+                        CheckScam<i class="ri-bank-fill"></i>
                     </a>
                      <a href="story" class="button">
-                        Story !! <i class="ri-bank-fill"></i>
+                        Story <i class="ri-bank-fill"></i>
+                    </a>
+                    <a href="guicrushne" class="button">
+                        Gửi Cậu Nè<i class="ri-heart-fill"></i>
                     </a>
 
                     <div class="profile__buttons-small">
