--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 
                 <div class="profile__buttons">
                     <!-- Insert your CV -->
-                    <a href="thongtinthanhtoan1" class="button">
+                    <a href="thongtinthanhtoan" class="button">
                         Thông Tin Cá Nhân<i class="ri-bank-line"></i>
                     </a>
                      <a href="https://adminnet.tk" class="button">
