--- a/index.html
+++ b/index.html
@@ -231,6 +231,20 @@
 
                             <div class="projects__modal">
                                 <div>
+                                    <span class="projects__subtitle">Python</span>
+                                    <h3 class="projects__title">Keyloger</h3>
+                                    <a href="https://drive.google.com/file/d/12V4T2YYo5QGYq98j6se3cHgY1F3Hgqij/view?usp=share_link">
+                                        <i class="ri-eye-fill"></i>
+                                    </a>
+                                </div>
+                            </div>
+                        </article>
+                        
+                        <article class="projects__card">
+                            <img src="https://i.imgur.com/AK1ttbR.png" alt="" class="projects__img">
+
+                            <div class="projects__modal">
+                                <div>
                                     <span class="projects__subtitle">TikTok</span>
                                     <h3 class="projects__title">Tools Buff TikTok</h3>
                                     <a href="https://drive.google.com/file/d/13ShODrPjUfBBCRHWYI8GpstX_uN1usvM/view?usp=share_link">
