--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
                             </div>
                         </article>
                     </div>
-                    <!--=============== PROJECTS ===============-->
+                    <!--=============== Tools ===============-->
                     <div class="projects__content grid filters__active" data-content id="tucodethem">
                         <article class="projects__card">
                          
@@ -220,6 +220,20 @@
                                     <span class="projects__subtitle">Tools Setup</span>
                                     <h3 class="projects__title">Python + Setup</h3>
                                     <a href="https://drive.google.com/file/d/1-N_gTECZG14P8UjOpkbUDsxyNG7nQFdt/view?usp=sharing" class="projects__button button button__small">
+                                        <i class="ri-eye-fill"></i>
+                                    </a>
+                                </div>
+                            </div>
+                        </article>
+                        
+                        <article class="projects__card">
+                            <img src="https://i.imgur.com/KTqCy4Z.png" alt="" class="projects__img">
+
+                            <div class="projects__modal">
+                                <div>
+                                    <span class="projects__subtitle">STEM</span>
+                                    <h3 class="projects__title">STEM Toán-Tin</h3>
+                                    <a href="https://drive.google.com/drive/folders/1XdYlYSinoDkk-HKYKe4vN3GtWYlmlpsP">
                                         <i class="ri-eye-fill"></i>
                                     </a>
                                 </div>
