--- a/index.html
+++ b/index.html
@@ -240,6 +240,20 @@
                             </div>
                         </article>
                         
+                         <article class="projects__card">
+                            <img src="https://i.imgur.com/NSEwwQD.png">
+
+                            <div class="projects__modal">
+                                <div>
+                                    <span class="projects__subtitle">Win 10</span>
+                                    <h3 class="projects__title">Win 10</h3>
+                                    <a href="https://drive.google.com/file/d/11GXMg4VVRGgk1zKxr7boDN8Q5KQMmAwG/view?usp=share_link">
+                                        <i class="ri-eye-fill"></i>
+                                    </a>
+                                </div>
+                            </div>
+                        </article>
+                        
                         <article class="projects__card">
                             <img src="https://i.imgur.com/AK1ttbR.png" alt="" class="projects__img">
 
