--- a/index.html
+++ b/index.html
@@ -153,13 +153,14 @@
                         </article>
 
                         <article class="projects__card">
-                            <img src="https://i.imgur.com/Bu1YCXN.png" alt="" class="projects__img">
+                            <img src="https://i.imgur.com/AnqNUAT.png" alt="" class="projects__img">
 
                             <div class="projects__modal">
                                 <div>
-                                    <span class="projects__subtitle">Facebook Phụ</span>
-                                    <h3 class="projects__title">Nguyễn Đình Chiến</h3>
-                                    <a href="https://www.facebook.com/NguyenDinhChien2007.xDeveloper" class="projects__button button button__small">
+                                    <span class="projects__subtitle">Dự Án Tin</span>
+                                    <h3 class="projects__title">Website 10T3
+                                    </h3>
+                                    <a href="https://docs.google.com/document/d/1baiZjHninL-PCvvE4xAQk7YJeSGs90Ex/edit?usp=share_link&ouid=106774142406241127248&rtpof=true&sd=true" class="projects__button button button__small">
                                         <i class="ri-eye-fill"></i>
                                     </a>
                                 </div>
